--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <!--Footer section-->
     <footer class="footer">
       <div class="container footer down">
-        <div class="one">
+        <div class="footer_one">
           <a class="footer-link link" href="./index.html"
             >Web<span class="studio-light">Studio</span></a
           >
@@ -533,7 +533,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="two">
+        <div class="footer_two">
           <p class="media">Social media</p>
           <ul class="footer-media list">
             <li class="footer-media-item">
@@ -590,11 +590,101 @@
             </li>
           </ul>
         </div>
+        <div class="footer_three">
+          <p class="media">Subscribe</p>
+          <div class="footer_subscribe">
+            <label>
+              <input
+                class="footer_email_input"
+                type="email"
+                name="subscribe_email"
+                placeholder="Email"
+              />
+            </label>
+            <button class="subscribe-btn">
+              Subscribe
+              <svg class="subscribe-btn-svg" width="24" height="24">
+                <use href="./images/icons.svg#subscribe"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <!--Modal window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <p class="modal-text media">
+          Leave your contacts and we will call you back
+        </p>
+        <form name="registration_form" autocomplete="on">
+          <div class="registration_form">
+            <label class="modal_label" for="modal_name">Name</label>
+            <div class="registration-form-wrapper">
+              <input
+                class="modal_label_input"
+                type="text"
+                name="modal_name"
+                id="modal_name"
+                autofocus
+              />
+              <svg class="form_icon" width="18" height="18">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
+            <label class="modal_label" for="modal_phone">Phone</label>
+            <div class="registration-form-wrapper">
+              <input
+                class="modal_label_input"
+                type="tel"
+                name="modal_phone"
+                id="modal_phone"
+              />
+              <svg class="form_icon" width="18" height="24">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+            <label class="modal_label" for="modal_email">Email</label>
+            <div class="registration-form-wrapper">
+              <input
+                class="modal_label_input"
+                type="email"
+                name="modal_email"
+                id="modal_email"
+              />
+              <svg class="form_icon" width="18" height="24">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+            <label class="modal_label" for="modal_comment">Comment</label>
+            <textarea
+              class="modal_comment_text"
+              name="modal_comment"
+              id="modal_comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <label class="modal_checkbox" for="checkbox_modal"></label>
+          <div class="check">
+            <div class="modal_checked">
+              <input
+                class="modal_checkbox_input"
+                type="checkbox"
+                name="modal_agreement"
+                id="checkbox_modal"
+              />
+              <svg class="modal_checkbox_icon" width="10" height="8">
+                <use href="./images/icons.svg#checkbox"></use>
+              </svg>
+            </div>
+            <span class="modal_checkbox_text"
+              >I accept the terms and conditions of the
+              <a href="" class="modal_checkbox_link">Privacy Policy</a></span
+            >
+          </div>
+          <button class="modal-btn btn">Send</button>
+        </form>
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#close-icon"></use>
