--- a/portfolio.html
+++ b/portfolio.html
@@ -299,10 +299,10 @@
         </div>
       </section>
     </main>
-    <!--Fotter section-->
+    <!--Footer section-->
     <footer class="footer">
       <div class="container footer down">
-        <div class="one">
+        <div class="footer_one">
           <a class="footer-link link" href="./index.html"
             >Web<span class="studio-light">Studio</span></a
           >
@@ -311,7 +311,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="two">
+        <div class="footer_two">
           <p class="media">Social media</p>
           <ul class="footer-media list">
             <li class="footer-media-item">
@@ -367,6 +367,25 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer_three">
+          <p class="media">Subscribe</p>
+          <div class="footer_subscribe">
+            <label>
+              <input
+                class="footer_email_input"
+                type="email"
+                name="subscribe_email"
+                placeholder="Email"
+              />
+            </label>
+            <button class="subscribe-btn">
+              Subscribe
+              <svg class="subscribe-btn-svg" width="24" height="24">
+                <use href="./images/icons.svg#subscribe"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
